--- a/.air.conf
+++ b/.air.conf
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
 cmd = "go build -o ./tmp/main ./main.go"
 bin = "tmp/main"
 full_bin = "APP_ENV=dev APP_USER=air ./tmp/main"
-include_ext = ["go","tmpl"]
+include_ext = ["go","tmpl","html"]
 exclude_dir = ["vendor", "docs","docker"]
 exclude_file = []
 stop_on_error = true
