已拷贝数量，用户是否已拷贝

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
             - mysql:mysql
         volumes:
             - ./:/root/app
-        command: /bin/bash -c  "cd /root/app/;air" #./run.sh ./debug_bin;
+        command: /bin/bash -c "cd /root/app/;air"
 
     mysql:
         image: mysql:8
