--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
             - mysql:mysql
         volumes:
             - ./:/root/app
-        command: /bin/bash -c "cd /root/app/;air"
+        command: /bin/bash -c "/wait-for-it.sh mysql:3306 -- echo mysql launch success;\
+            cd /root/app/;air"
 
     mysql:
         image: mysql:8
