--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
 
     // The optional 'workspaceFolder' property is the path VS Code should open by default when
     // connected. This is typically a file mount in .devcontainer/docker-compose.yml
-    "workspaceFolder": "/Users/suke/Desktop/thefireseed",
+    "workspaceFolder": "/Users/suke/Desktop/github.com/lazyfure/thefireseed",
 
     // Set *default* container specific settings.json values on container create.
     "settings": {
