--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
             - mysql:mysql
         volumes:
             - ./:/root/app
-        command: /bin/bash -c "cd /root/app;/wait-for-it.sh mysql:3306 -- echo mysql launch success;air"
+        command: /bin/bash -c "/wait-for-it.sh mysql:3306 -- echo mysql launch success;air"
 
     mysql:
         image: mysql:8
