--- a/.air.toml
+++ b/.air.toml
@@ -2,7 +2,7 @@ root = "."
 tmp_dir = "tmp"
 
 [build]
-cmd = "go build -o ./tmp/main ./main.go"
+cmd = "go mod tidy;go build -o ./tmp/main ./main.go"
 bin = "tmp/main"
 full_bin = "APP_ENV=dev APP_USER=air ./tmp/main"
 include_ext = ["go","tmpl","html"]
